crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__schema_rule_argument.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "schema User { name: min(,) }"
---
alder::syntax

  × I was expecting an expression
   ╭─[/project/src/main.ald:1:25]
 1 │ schema User { name: min(,) }
   · ┬                       ┬
   · │                       ╰── expected an expression here
   · ╰── this schema declaration starts here
   ╰────
