crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__schema_type.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "schema User { name: Array[] }"
---
alder::syntax

  × type argument lists cannot be empty
   ╭─[/project/src/main.ald:1:27]
 1 │ schema User { name: Array[] }
   ·                          ┬┬
   ·                          │╰── add a type argument or remove `[]`
   ·                          ╰── this type argument list starts here
   ╰────
