crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__statement_return.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "fn f() { return (1 +) }"
---
alder::syntax

  × operator `+` is missing its right operand
   ╭─[/project/src/main.ald:1:21]
 1 │ fn f() { return (1 +) }
   ·                 ┬   ┬
   ·                 │   ╰── expected an expression
   ·                 ╰── these parentheses start here
   ╰────
