crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__statement_use_member.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "fn f() { use Db.value }"
---
alder::syntax

  × `use` names a provider, not one of its members
   ╭─[/project/src/main.ald:1:16]
 1 │ fn f() { use Db.value }
   ·        ┬       ┬
   ·        │       ╰── remove this member access
   ·        ╰── this function body starts here
   ╰────
